--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "~3.4.7",
     "mime": "~1.2.11",
     "stylus": "~0.41.3",
-    "tedious": "~0.1.5"
+    "tedious": "~0.1.5",
+		"crafity-core": "~0.1.7"
   },
   "devDependencies": {},
   "scripts": {
