Updated the SQL Server instance name

--- a/data_server/config.json
+++ b/data_server/config.json
@@ -5,7 +5,7 @@
 		"server": "192.168.145.129",
 		"options": {
 			"database": "dotcontroles",
-			"instanceName": "SQLEXPRESS",
+			"instanceName": "SQLEXPRESS_2012",
 			"rowCollectionOnRequestCompletion": false
 		}
 	}
