Added a logging level section in server side config

--- a/data_server/config.json.template
+++ b/data_server/config.json.template
@@ -7,6 +7,9 @@
 			"database": "dotcontroles",
 			"instanceName": "SQLEXPRESS_2012",
 			"rowCollectionOnRequestCompletion": false
-		}
+		},
+		"logger": {
+    	"level": 1
+    }
 	}
 }
